# bank-reconciliation-qt

./: .clang-format  .gitignore  AboutDialog.h  BR_MainWindow.cpp  BR_MainWindow.h  CMakeLists.txt  EntryDataModel.cpp  EntryDataModel.h  EntryMatchModel.cpp  FileSettingsDialog.cpp  FileSettingsDialog.h  LICENSE  README.md  br-res.qrc  helpers.cpp  helpers.h  main.cpp
bank-reconc-lib/: CMakeLists.txt  EntryBase.cpp  EntryBase.h  EntryMatch.cpp  EntryMatch.h  brlib_common.cpp  brlib_common.h  parse.cpp  parse.h  reconcile.cpp  reconcile.h
include/: AboutDialog.h  BR_MainWindow.h  EntryDataModel.h  EntryMatchModel.h  FileSettingsDialog.h  MissingEntryModel.h  helpers.h
src/: BR_MainWindow.cpp  EntryDataModel.cpp  EntryMatchModel.cpp  FileSettingsDialog.cpp  MissingEntryModel.cpp  helpers.cpp  mainwindow-tbl-selection.cpp
ui/: aboutdialog.ui  filesettings.ui  mainwindow.ui
